--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,31 @@
+logging.level.com.healthX=debug
+
 # symmetric key
 #jwt.key=ymLTU8rq83j4fmJZj60wh4OrMNuntIj4fmJ
 
 keypwd=ssia123
 privateKey=ssia.jks
 alias=ssia
+
+# ===============================
+# DATASOURCE
+# ===============================
+spring.datasource.url=jdbc:h2:file:./data/healthX
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=pwd
+#spring.h2.console.enabled=true
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# ----------------------------------------
+# DATA PROPERTIES
+# ----------------------------------------
+# FLYWAY (FlywayProperties)
+spring.flyway.table=flyway_schema_history
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
